# law_changes_parser

./: .gitignore  Cargo.toml  README.md  input_test.html  test.md  test_dia.md  test_dia2.md  test_graph_diagram.md  test_md.md  test_md2.md  test_txt.txt
.cargo/: config.toml
frontend/: .env  index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/assets/styles/: font.scss
frontend/src/: App.vue  main.ts  router.ts
frontend/src/components/: DynamicRender.vue  Editor.vue  FileUploader.vue  FileUploaderNative.vue  FilesUploaderModal.vue  FilesViewer.vue  Loader.vue  MenuUserIcon.vue  NavigationMenu.vue  PdfViewer.vue  PdfViewerDrawler.vue  PdfViewerRecycle.featured  PrivilegesEditor.vue  ProfileEditor.vue  RoleSelector.vue  SvgIcon.vue  UserIcon.vue  file_document_map.ts  live_search.ts
frontend/src/composables/: useImage.ts  useTheme.ts  useUser.ts  useVisible.ts
frontend/src/services/: date.ts  emitter.ts  helpers.ts  sse.ts  (+5 more)
src/: actualizer.rs  change_action.rs  change_path.rs  changes_graph.rs  changes_hierarchy.rs  error.rs  format_extensions.rs  json_path.rs  json_path_creator.rs  lib.rs
src/objects/: header_type.rs  item_type.rs  mod.rs  number.rs  number_alternative.rs  remain_tokens.rs
src/outputs/: diagram.rs  markdown.rs  mod.rs  text.rs
src/parsers/: apply.rs  changes_checker.rs  changes_map.rs  changes_parser.rs  chars.rs  consts.rs  diagramm.rs  mod.rs  numbers.rs  only_path.rs  path_plus_number.rs  paths_list.rs  replace.rs  tags.rs  target_document.rs  tmp.rs  words.rs
test_data/: test_1.txt  test_2.txt
tests_html/: file1.html
(+30 files in other folders)
