[package]
name = "law_changes_parser"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "law_changes_parser"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0.105"
serde = {version = "1.0.188", features = ["derive"]}
utilites = { version="*", git="https://github.com/P40b0s/help_utilites.git", package = "utilites", features = ["dates", "http", "hashing", "retry", 'async-io']}
logger = { version="*", git="https://github.com/P40b0s/logger.git"}
scraper="0.23.1"
url="2.5.4"
nom="8.0.0"
jsonpath-rust = "1.0.2"
thiserror="2.0.12"
once_cell="1.21.3"
indexmap="*"
[dev-dependencies]
pretty_assertions = "1.4.1"
insta = {version="*", features = ["json"]}
